--- a/public/Nitrocid.Base/Resources/Languages/eng.json
+++ b/public/Nitrocid.Base/Resources/Languages/eng.json
@@ -9167,6 +9167,30 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "Selects a random screensaver"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "To get started, write 'help' and press ENTER."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "Audio cue volume for the reader"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "Specify how loud do you want the reader audio cues to be"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "Password mask character (reader)"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "A character that masks the input password. Leave blank for more security."
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "To go to the shell, press the S key if you're in the homepage. Afterwards, you can write 'help' and press ENTER to get started!"
     }
   ]
 }
