--- a/public/Nitrocid.Base/Resources/Languages/eng.json
+++ b/public/Nitrocid.Base/Resources/Languages/eng.json
@@ -9199,6 +9199,10 @@
     {
       "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
       "text": "Close"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "Shut down"
     }
   ]
 }
