--- a/public/Nitrocid.Base/Resources/Languages/eng.json
+++ b/public/Nitrocid.Base/Resources/Languages/eng.json
@@ -9203,6 +9203,14 @@
     {
       "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
       "text": "Shut down"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "File Manager (single pane)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "Opens the file manager in a single pane"
     }
   ]
 }
