add - Restored the date command
---

We have accidentally removed the "date" command that showed the date and
the time during the locale cleanup commit ID 8b14a74. This was accidental
and we'll localize the new strings for it as soon as we reach near the
release candidate stage.

Nitrocid on a GitBook instance still mentions the command, but the command
itself was missing in the tech preview. We've finally fixed this huge
screwup.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/eng.json
+++ b/public/Nitrocid.Base/Resources/Languages/eng.json
@@ -9211,6 +9211,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
       "text": "Opens the file manager in a single pane"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "Shows just the date"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "Shows just the time"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "Uses the UTC time zone instead of the local time zone"
     }
   ]
 }
